<resources>
    <string name="app_name">RickANdMoRtY</string>
    <string name="title_home">Character</string>
    <string name="title_dashboard">Episode</string>
    <string name="title_notifications">Location</string>
    <string name="title_search">Search</string>
    <string name="image_character">image_character</string>
    <string name="big_rick">Big rick</string>
    <string name="alive">Alive</string>
    <string name="last_known_location">Last known location:</string>
    <string name="earth">Earth</string>
    <string name="first_seen_in">First seen in:</string>
    <string name="episode">Episode</string>
    <string name="human">Human</string>
    <string name="search">Search</string>
</resources>