<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@color/item_background"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCharacter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image_character"
            android:src="@drawable/big_rick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/candal"
            android:text="@string/big_rick"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/ivCharacter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/alive"
            android:layout_marginStart="12sp"/>

        <TextView
            android:id="@+id/tvSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvStatus"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/human"
            android:layout_marginStart="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvStatus"
            app:layout_constraintEnd_toStartOf="@id/tvSpecies"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:text=" - "
            android:textSize="12sp"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />


        <TextView
            android:id="@+id/tvHintLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            android:textColor="@color/tc_grey"
            android:textSize="12sp"
            android:text="@string/last_known_location"
            android:layout_marginStart="12sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvHintLocation"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/earth"
            android:layout_marginStart="12sp"/>

        <TextView
            android:id="@+id/tvHintEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            android:textColor="@color/tc_grey"
            android:textSize="12sp"
            android:text="@string/first_seen_in"
            android:layout_marginStart="12sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivCharacter"
            app:layout_constraintTop_toBottomOf="@id/tvHintEpisode"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/episode"
            android:layout_marginStart="12sp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

